nova_tests/negative_capability/defer_break_rejected.nv
// EXPECT_COMPILE_ERROR `break` is not allowed at the top level of `defer` body
//
// D90 Ф.3 (Вариант 3): top-level `break` в defer body запрещён —
// он hijack'нул бы окружающий loop. `break` внутри nested loop в
// defer body — разрешён (local control).

module negative_capability.defer_break_rejected


fn f() -> int {
    mut sum = 0
    for i in 0..10 {
        defer {
            break       // ❌ break в defer body
        }
        sum += i
    }
    sum
}
